2005-04-24  KOIE Hidetaka <hide@koie.org> / nom

	* emacs/mhc-guess.el (mhc-guess-date-regexp-list): add regexp.

2005-04-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* emacs/mhc-guess.el (mhc-guess/make-date-from-english-relative-week):
	Check that a argument `rel-word' is a string before calling
	`downcase' in order to avoid wrong type argument error.

2005-03-23  Yoshiaki Kasahara <kasahara@nc.kyushu-u.ac.jp>

	* ruby-ext/lib/mhc-gtk.rb.in: Use explicit regexp

2005-03-16  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-guess.el (mhc-guess-date-regexp-list): Support new
	regex for Japanese duration.

2005-01-27  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* emacs/mhc-wl.el (mhc-wl-summary-mode-setup): Bind
	elmo-localdir-folder-path to mhc-mail-path.

2005-01-27  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/mhc-mew.el (mhc-mew-highlight-message): Highlight headers
	when import buffer has headers.

2005-01-19  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* emacs/mhc-gnus.el (mhc-gnus-insert-summary-contents): Pass null
	string to `mhc-gnus/make-full-mail-header' in order to avoid an
	error that occurs when executing `gnus-summary-print-article'.

2005-01-14  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-input-sequences): New option.
	(mhc-edit): Inquire the input by turns of `mhc-input-sequences'.

2004-11-26  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* emacs/mhc-cvs.el (mhc-cvs/backend): Handle non-number return
	value of call-process.

2004-11-15  KOIE Hidetaka <hide@koie.org> / nom

	* ruby-ext/mhc_pilib.c
	(rpi_sock_listen): password hack for Palm OS 4.x.

2004-10-28  NOGUCHI Yusuke <nogunogu@mva.biglobe.ne.jp> / nom

	* emacs/mhc-guess.el: improvement of mhc-guess-location-regexp-list

2004-10-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* ruby-ext/lib/mhc-schedule.rb (MON_LONG_REGEX, WEK_LONG_REGEX):
	New constants.
	(MhcScheduleItem#add_cond, MhcScheduleItem#parse_xsc_headers):